# drf-blog-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
blog/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_add_models_user_profile_category_post_comment_media.py  0001_create_model_profile.py  0002_alter_fields_avatar_biography_user_in_profile.py  0002_alter_size_username_on_user.py  0003_create_models_category_comment_post_media.py  0003_make_field_birthday_mandatory_on_profile.py  0004_fix_fiel_name_category_on_post.py  0005_make_fields_post_comment_no_mandatory_on_media.py  0006_remove_comment_field_on_media.py  0007_add_explicit_fiedls_on_user_model.py
core/tests/: test_post_api.py  test_post_model.py  test_post_view.py
