[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Thiago H. Hormann <thiago.h.hormann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
flake8 = "^6.1.0"
pillow = "^10.0.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
